# fine

./: .eslintrc.yml  .gitignore  Cargo.toml  README.md  akari  akari.ts  biu  build-client  build-client.py  maka  package-lock.json  package.json  tsconfig.base.json  tsconfig.client.acct.json  tsconfig.client.drive.json  tsconfig.client.sehu.json  tsconfig.json  tsconfig.server.json  webpack.config.drive.js  webpack.config.js  webpack.config.sehu.js
asset/: 404.html  index.html  log-ex.html  log-info.html  logs.html  robots.txt
asset/.well-known/: security.txt
asset/app/: blog.html  game.html  sehu.html
asset/static/: logs.css
docs/: admin.md  app-server.md  authentication.md  build-script.md  certification.md  container.md  cost-user-story.md  database.md  dependencies.md  deploy-service.md  file-structure.md  ipv6.md  maintainence.md  markdown.md  multi-app.md  multiapp.md  native-service.md  new-in-2025.md  old.md  server-routing.md  short-link.md  wimm-design.md
script/: admin-base.ts  admin.js  admin.ts  antd-dayjs-plugin.d.ts  build-app-client.ts  build-app-server.ts  build-core.js  build-home-page.ts  build-self.ts  build-server-core.ts  build-simple-page.ts  build-user.js  build.js  build.mjs  build.ts  command-center.js  common.ts  config.ts  index-app.ts  index-server.ts  index.ts  local.ts  logger.js  make-akari.ts  make.ts  makelink  remote-akari.ts  run-codegen.ts  run-mypack.ts  run-sass.ts  run-source-map.ts  run-sourcemap.ts  run-typescript.ts  run-webpack.ts  server.ts  types.d.ts  typescript-loader.js  upload.js  watch.ts  workflow.md
script/components/: arch.ts  codegen.ts  common.ts  eslint.ts  logger.ts  messenger.ts  minify.ts  mypack.ts  sftp.ts  template-client.tsx  typescript.ts
scripts/: build.js  build_config.js  build_try.js  manage.js  myts.js  source_map_merger.js  typescript_runner.js  webpack_runner.js
setup/: Dockerfile  alioss.rs  alioss.toml  alioss.tomllock  alioss.ts  backup-auto.ts  backup-doki.rs  backup-local.ts  backup-manage.ts  backup-repo.py  backup-restore.py  backup-restore.ts  backup-schedule.py  backup-schedule.ts  backup.py  certbot-auth-hook.py  certbot-create-cert.py  certbot-deploy-hook.py  certbot-entrypoint.py  certbot-renew-schedule.py  database-auth.conf  database-backup.sh  database-main.conf  database-psqlrc  database-setup.sh  database-test.ts  docker-compose.sh  docker-compose.yml  docker-setup.py  doki.rs  dontry.py  make-setup.py
src/: config.ts  index.html  index.js  index.ts
src/adk/: error.ts  (+2 more)
static/: 404.html  acct.html  drive.html  index.html  sehu.html  sehu.js
tsconfig/: client.acct.json  client.drive.json  client.index.json  client.logs.json  client.sehu.json  client.view-log.json  server.json
(+172 files in other folders)
